<resources>
    <string name="app_name">SpeakUp</string>
    <string name="loading">로딩중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="cancel">취소</string>
    <string name="complete">완료</string>
    <string name="back_image">뒤로가기</string>
    <string name="refresh">새로고침</string>
    <string name="day_unit">일</string>
    <string name="hour_unit">시간</string>
    <string name="minute_unit">분</string>

    <string name="login_id_hint">아이디를 입력해주세요</string>
    <string name="login_pwd_hint">비밀번호를 입력해주세요</string>
    <string name="login_title">Login</string>
    <string name="login_forgot">로그인 정보를 잊으셨나요?</string>
    <string name="login_to_find">아이디/비밀번호 찾기</string>
    <string name="login_none">계정이 없으신가요?</string>
    <string name="login_to_signup">가입하기</string>

    <string name="signup_title">Sign Up</string>
    <string name="signup_student_id_title">학번</string>
    <string name="signup_student_id_hint">학번을 입력해주세요</string>
    <string name="signup_student_id_length">학번은 숫자 7자리로 입력해주세요</string>
    <string name="signup_id_title">아이디</string>
    <string name="signup_pwd_title">비밀번호</string>
    <string name="signup_pwd_check_title">비밀번호 확인</string>
    <string name="signup_pwd_check_hint">비밀번호를 다시 한 번 입력해주세요</string>
    <string name="signup_pwd_check_wrong">비밀번호가 일치하지 않습니다</string>
    <string name="signup_complete">성공적으로 회원가입이 완료되었습니다</string>

    <string name="main_title">강의목록</string>
    <string name="main_empty">수강 중인 강의가 없습니다</string>

    <string name="course_title">Course</string>
    <string name="course_empty">과제가 존재하지 않습니다</string>

    <string name="assignment_title">Assignment</string>
    <string name="assignment_submit_title">제출 상황</string>
    <string name="assignment_submit_no">제출 안 함</string>
    <string name="assignment_submit_yes">제출 완료</string>
    <string name="assignment_due_date_title">종료 일시</string>
    <string name="assignment_due_date">2020–11–15 00:00</string>
    <string name="assignment_remain_title">마감까지 남은 기한</string>
    <string name="assignment_remain_late">제출 마감이 지났습니다</string>
    <string name="assignment_remain">0분</string>
    <string name="assignment_result_title">최종 제출 결과</string>
    <string name="assignment_result">결과 확인</string>
    <string name="assignment_translate">통역하기</string>
    <string name="assignment_result_no">과제 제출 기록이 존재하지 않습니다.</string>
    <string name="assignment_speed_title">제한시간 선택</string>
    <string name="assignment_speed_description">원문음성의 x배의 길이가 발화 제한시간으로 설정됩니다.</string>
    <string name="assignment_speed1">1</string>
    <string name="assignment_speed2">1.2</string>
    <string name="assignment_speed3">1.5</string>

    <string name="record_audio_playing">원문 음성 재생 중</string>
    <string name="record_audio_recording">녹음 중</string>
    <string name="record_audio_complete">녹음 완료</string>

    <string name="result_transcription">전사 결과</string>
    <string name="result_filler">추임새 통계</string>
    <string name="result_silence">침묵 통계</string>
    <string name="result_preparing">과제 결과를 생성중입니다…\n잠시 후에 다시 확인해주세요</string>
</resources>