<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialog_speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_speed_title"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_speed_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_speed_description"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_speed_title" />

    <RadioGroup
        android:id="@+id/dialog_speed_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/dialog_speed_description">

        <RadioButton
            android:id="@+id/dialog_speed_rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/assignment_speed1" />

        <RadioButton
            android:id="@+id/dialog_speed_rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/assignment_speed2" />

        <RadioButton
            android:id="@+id/dialog_speed_rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/assignment_speed3" />

    </RadioGroup>

    <TextView
        android:id="@+id/dialog_speed_tv_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="?selectableItemBackground"
        android:padding="15dp"
        android:text="@string/complete"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_speed_rg" />

    <TextView
        android:id="@+id/dialog_speed_tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="?selectableItemBackground"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_speed_tv_complete"
        app:layout_constraintTop_toTopOf="@id/dialog_speed_tv_complete" />

</androidx.constraintlayout.widget.ConstraintLayout>