<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".src.result.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/result_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_image"
            android:onClick="customOnClick"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/result_iv_back"
            app:layout_constraintStart_toEndOf="@id/result_iv_back"
            app:layout_constraintTop_toTopOf="@id/result_iv_back"
            tools:text="@string/assignment_title" />

        <ImageView
            android:id="@+id/result_iv_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/refresh"
            android:onClick="customOnClick"
            android:padding="5dp"
            android:src="@drawable/ic_refresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result_tv_transcription_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/result_transcription"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_iv_back" />

        <WebView
            android:id="@+id/result_webview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/result_tv_transcription_title" />

        <View
            android:id="@+id/result_transcription_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/bgGray"
            app:layout_constraintTop_toBottomOf="@id/result_webview" />

        <TextView
            android:id="@+id/result_tv_filler_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/result_filler"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_transcription_divider" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/result_barchart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_tv_filler_title" />

        <View
            android:id="@+id/result_filler_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="@color/bgGray"
            app:layout_constraintTop_toBottomOf="@id/result_barchart" />

        <TextView
            android:id="@+id/result_tv_silence_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/result_silence"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_filler_divider" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/result_piechart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_tv_silence_title" />

        <TextView
            android:id="@+id/result_tv_preparing"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:text="@string/result_preparing"
            android:textColor="@color/colorHint"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_iv_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>