<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.record.RecordActivity">

    <ProgressBar
        android:id="@+id/record_progress_bar"
        style="@style/ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/record_iv_back" />

    <ImageView
        android:id="@+id/record_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_image"
        android:onClick="customOnClick"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/record_iv_recorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_image"
        android:onClick="customOnClick"
        android:padding="5dp"
        android:src="@drawable/ic_audio_voice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_iv_back"
        app:layout_constraintBottom_toTopOf="@id/record_btn_stop" />

    <TextView
        android:id="@+id/record_tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_audio_playing"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_iv_recorder" />

    <Button
        android:id="@+id/record_btn_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bg_button_primary"
        android:onClick="customOnClick"
        android:padding="15dp"
        android:text="@string/complete"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_tv_status" />

</androidx.constraintlayout.widget.ConstraintLayout>