<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.course.CourseActivity">

    <ImageView
        android:id="@+id/course_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_image"
        android:onClick="customOnClick"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/course_iv_back"
        app:layout_constraintStart_toEndOf="@id/course_iv_back"
        app:layout_constraintTop_toTopOf="@id/course_iv_back"
        tools:text="@string/course_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/course_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_iv_back"
        tools:listitem="@layout/item_assignment" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/course_cl_progressbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/course_recyclerview">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/course_tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_empty"
        android:textColor="@color/colorHint"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/course_recyclerview" />

</androidx.constraintlayout.widget.ConstraintLayout>